--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "sanya",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^4.1.4",
     "mongoose": "^6.0.12"
